--- a/src/views/partials/top.ejs
+++ b/src/views/partials/top.ejs
@@ -17,6 +17,7 @@
       <div class="container header-inner">
         <a href="/" class="brand">Appointment Vault</a>
         <nav class="nav-links">
+          <a class="button glass-button button-secondary" href="/">Home</a>
           <a class="button glass-button button-secondary" href="/appointments/new">Add Appointment</a>
           <a class="button glass-button button-secondary" href="/agent">AI Quick Add</a>
           <a class="button glass-button button-secondary" href="/settings">Settings</a>
