--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -109,6 +109,9 @@
           <div class="actions">
             <a class="button glass-button button-secondary" href="/appointments/<%= appointment.id %>">View</a>
             <a class="button glass-button button-secondary" href="/appointments/<%= appointment.id %>/edit">Edit</a>
+            <form action="/appointments/<%= appointment.id %>/complete" method="POST">
+              <button class="button glass-button" type="submit">Complete</button>
+            </form>
             <form action="/appointments/<%= appointment.id %>/delete" method="POST">
               <button class="button glass-button button-danger" type="submit">Delete</button>
             </form>
@@ -137,6 +140,9 @@
           <div class="week-actions">
             <a class="button glass-button button-secondary" href="/appointments/<%= appointment.id %>">View</a>
             <a class="button glass-button button-secondary" href="/appointments/<%= appointment.id %>/edit">Edit</a>
+            <form class="inline-nav-form" action="/appointments/<%= appointment.id %>/complete" method="POST">
+              <button class="button glass-button" type="submit">Complete</button>
+            </form>
             <form class="inline-nav-form" action="/appointments/<%= appointment.id %>/delete" method="POST">
               <button class="button glass-button button-danger" type="submit">Delete</button>
             </form>
@@ -169,6 +175,9 @@
           <div class="actions">
             <a class="button glass-button button-secondary" href="/appointments/<%= appointment.id %>">View</a>
             <a class="button glass-button button-secondary" href="/appointments/<%= appointment.id %>/edit">Edit</a>
+            <form action="/appointments/<%= appointment.id %>/complete" method="POST">
+              <button class="button glass-button" type="submit">Complete</button>
+            </form>
             <form action="/appointments/<%= appointment.id %>/delete" method="POST">
               <button class="button glass-button button-danger" type="submit">Delete</button>
             </form>
