--- a/src/views/settings.ejs
+++ b/src/views/settings.ejs
@@ -46,12 +46,13 @@
       (<%= safeHistoryAppointments.length %> appointment<%= safeHistoryAppointments.length === 1 ? "" : "s" %>)
     <% } %>
   </p>
-  <button id="openHistoryModal" class="button glass-button button-secondary" type="button">
+  <a
+    id="openHistoryModal"
+    class="button glass-button button-secondary"
+    href="/settings/history"
+  >
     View History Log
-  </button>
-  <noscript>
-    <a class="button glass-button button-secondary" href="/settings/history">Open History Log</a>
-  </noscript>
+  </a>
 </section>
 
 <div id="historyModal" class="history-modal-backdrop" hidden aria-hidden="true">
@@ -119,7 +120,12 @@
       }
     };
 
-    openButton.addEventListener("click", () => {
+    openButton.addEventListener("click", (event) => {
+      if (event.metaKey || event.ctrlKey || event.shiftKey || event.button !== 0) {
+        return;
+      }
+
+      event.preventDefault();
       setOpen(true);
     });
 
