--- a/src/views/settings.ejs
+++ b/src/views/settings.ejs
@@ -49,7 +49,7 @@
   <a
     id="openHistoryModal"
     class="button glass-button button-secondary"
-    href="/settings/history"
+    href="/settings?history=open"
   >
     View History Log
   </a>
@@ -120,37 +120,53 @@
       }
     };
 
+    const applyHistoryQueryState = (isOpen) => {
+      const url = new URL(window.location.href);
+      if (isOpen) {
+        url.searchParams.set("history", "open");
+      } else {
+        url.searchParams.delete("history");
+      }
+      window.history.replaceState({}, "", url);
+    };
+
     openButton.addEventListener("click", (event) => {
-      if (event.metaKey || event.ctrlKey || event.shiftKey || event.button !== 0) {
+      if (event.metaKey || event.ctrlKey || event.shiftKey || event.altKey) {
         return;
       }
 
       event.preventDefault();
       setOpen(true);
+      applyHistoryQueryState(true);
     });
 
     closeButton.addEventListener("click", (event) => {
       event.preventDefault();
       setOpen(false);
+      applyHistoryQueryState(false);
     });
 
     modal.addEventListener("click", (event) => {
       if (event.target === modal) {
         setOpen(false);
+        applyHistoryQueryState(false);
       }
     });
 
     document.addEventListener("keydown", (event) => {
       if (event.key === "Escape" && !modal.hidden) {
         setOpen(false);
+        applyHistoryQueryState(false);
       }
     });
 
     window.addEventListener("pageshow", () => {
-      setOpen(false);
+      const params = new URLSearchParams(window.location.search);
+      setOpen(params.get("history") === "open");
     });
 
-    setOpen(false);
+    const params = new URLSearchParams(window.location.search);
+    setOpen(params.get("history") === "open");
   })();
 </script>
 
