--- a/src/views/settings.ejs
+++ b/src/views/settings.ejs
@@ -49,7 +49,7 @@
   <a
     id="openHistoryModal"
     class="button glass-button button-secondary"
-    href="/settings?history=open"
+    href="/settings/history"
   >
     View History Log
   </a>
